# MOSZE_vizsga_BogdanAdam

./: Battle.cpp  Battle.hpp  Bela.txt  Janos.txt  Terminator.txt  Warrior.cpp  Warrior.hpp  goodoutput.txt  input.txt  main.cpp  run_test.py
.github/workflows/: Test.yml  Teszt.yml  google_test.yml
codes/: Battle.cpp  Warrior.cpp  Warrior.hpp  input.txt  main.cpp
test/: CMakeLists.txt  unit_test.cpp
units/: Bela.json  Janos.json  Terminator.json
